--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -333,9 +333,7 @@
 
 				<div class="x_panel">
 					<div class="x_title">
-						<h2
-							th:text="#{label.accreditamento_titolo(#{label.visualizzazione}, ${accreditamentoWrapper.accreditamento.tipoDomanda.nome},${accreditamentoWrapper.accreditamento.stato.nome})}">Provvisorio
-							- bozza</h2>
+						<h2 th:text="#{label.accreditamento_titolo(#{label.visualizzazione}, ${accreditamentoWrapper.accreditamento.tipoDomanda.nome},${accreditamentoWrapper.accreditamento.stato.nome})}">Provvisorio</h2>
 						<div class="clearfix"></div>
 					</div>
 					<th:block
