cambiato submit button

--- a/src/main/resources/templates/pianoFormativo/pianoFormativoNew.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoNew.html
@@ -41,6 +41,8 @@
 							</div>
 							<div class="free-space"></div>
 
+							<input id="submitButtonPianoNew" type="submit" style="display: none;" />
+
 						</form>
 					</div>
 				</div>
