modifiche varie + pdf verbale WIP

--- a/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
@@ -146,7 +146,7 @@
 						"bFilter" : false,
 						"bInfo" : false,
 						"bPaginate" : false,
-						"ordering" : false,
+// 						"ordering" : false,
 						"autoWidth": false,
 						"columnDefs": [
 							{ "targets": 1, "width": "210px", "sClass": "center" },
@@ -158,7 +158,7 @@
 						"bFilter" : false,
 						"bInfo" : false,
 						"bPaginate" : false,
-						"ordering" : false,
+// 						"ordering" : false,
 						"columnDefs": [ {
 							"targets": 3,
 							"width": "70px",
