--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -315,6 +315,8 @@
 								</ul>
 							</div>
 
+							<a th:if="${@ecmProperties.debugTestMode}" class="btn btn-warning" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/verbale/pdf|}" >asd</a>
+
 							<!-- menù a pulsanti separati per il provider -->
 							<th:block th:if="${#authentication.principal.isProvider()}">
 								<a th:if="${accreditamentoWrapper.accreditamento.isBozza() or
