Bugfix table Accreditamento Stria Flusso

--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -1388,7 +1388,7 @@
 											<div class="clearfix"></div>
 										</div>
 										<div class="x_content">
-											<table th:unless="${#lists.isEmpty(accreditamentoWrapper.sedi) and (accreditamentoWrapper.sedeLegale == null)}" id="sedi-table" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${'datatable-responsive-sedi-'+mode}">
+											<table class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 												<thead>
 													<tr>
 														<th th:text="#{label.data}">Tipologia Sede</th>
