Link Linee Guida Eventi

--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -165,6 +165,9 @@
 					  <li class="">
 					    <a target="new" href="https://salute.regione.veneto.it/web/ecm/" th:text="#{label.portale}"></a>
 					  </li>
+					  <li class="">
+					    <a target="new" href="https://salute.regione.veneto.it/c/document_library/get_file?uuid=1aaaec64-1a69-458e-8e63-cf6982813ef5&amp;groupId=991613" th:text="#{label.linee_guida_eventi}"></a>
+					  </li>
               		</ul>
 				</nav>
 			</div>
