--- a/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
@@ -143,7 +143,7 @@
 
 					//table responsive evento edit
 					$('.datatable-responsive-evento-edit').DataTable({
-						"bFilter" : false,
+						/* "bFilter" : false, */
 						"bInfo" : false,
 						"bPaginate" : false,
 						/* "ordering" : false, */
@@ -155,7 +155,7 @@
 
 					//table responsive evento show
 					$('.datatable-responsive-evento-show').DataTable({
-						"bFilter" : false,
+						/* "bFilter" : false, */
 						"bInfo" : false,
 						"bPaginate" : false,
 						/* "ordering" : false, */
